--- a/Vimas/Areas/HeThong/Views/TrungTamGTVL/Create.cshtml
+++ b/Vimas/Areas/HeThong/Views/TrungTamGTVL/Create.cshtml
@@ -94,6 +94,14 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="form-group">
+                            <label class="control-label col-md-4" for="ChucDanh">Chức danh</label>
+                            <div class="col-md-6">
+                                <div class="fg-line">
+                                    @Html.TextBoxFor(q => q.ChucDanh, new { @class = "form-control" })
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
