--- a/Vimas/Views/Shared/_Layout.cshtml
+++ b/Vimas/Views/Shared/_Layout.cshtml
@@ -107,7 +107,7 @@
                             <a href="@Url.Action("Index","ThongTinCaNhan", new { area = "HocVien" })"><i class="sub-menu zmdi zmdi-trending-up"></i> Thông tin học viên</a>
                         </li>
                         <li>
-                            <a href="#"><i class="sub-menu zmdi zmdi-trending-up"></i> Nothing</a>
+                            <a href="@Url.Action("Index","SucKhoe", new { area = "HocVien" })"><i class="sub-menu zmdi zmdi-trending-up"></i> Sức Khỏe</a>
                         </li>
                     </ul>
                 </li>
@@ -121,7 +121,7 @@
                                 <a href="@Url.Action("Index","TaiKhoan", new { area = "Admin" })"><i class="sub-menu zmdi zmdi-trending-up"></i> Danh sách tài khoản</a>
                             </li>
                             <li>
-                                <a href="#"><i class="zmdi zmdi-window-restore"></i> Quản lý kho</a>
+                                <a href="@Url.Action("Index", "TrungTamGTVL", new { area = "HeThong"})"><i class="zmdi zmdi-window-restore"></i> Trung Tâm GTVL</a>
                             </li>
                         </ul>
                     </li>
