--- a/Vimas/Areas/HeThong/Views/TrungTamGTVL/Index.cshtml
+++ b/Vimas/Areas/HeThong/Views/TrungTamGTVL/Index.cshtml
@@ -99,19 +99,21 @@
         });
     }
 
-    function Delete(id){
-        $.ajax({
-            url: '@this.Url.Action("Delete")',
-            data: { id},
-            method: "POST",
-            success: function (result) {
-                alert(result.message);
-                window.location.hred = "@this.Url.Action("Index")";
-            },
-            error: function (error) {
-                alert(error.message);
-            }
-        });
+    function Delete(id) {
+        if (confirm("Bạn có chắc xóa dòng này?")) {
+            $.ajax({
+                url: '@this.Url.Action("Delete")',
+                data: { id},
+                        method: "POST",
+                success: function (result) {
+                    alert(result.message);
+                    window.location.hred = "@this.Url.Action("Index")";
+                },
+                error: function (error) {
+                    alert(error.message);
+                }
+            });
+        }
     }
 
 </script>
