Thêm menu Nghiệp Đoàn. Fix bug xóa nhưng không update datatable ở TrungTamGTVL

--- a/Vimas/Areas/HeThong/Views/TrungTamGTVL/Index.cshtml
+++ b/Vimas/Areas/HeThong/Views/TrungTamGTVL/Index.cshtml
@@ -107,13 +107,19 @@
                         method: "POST",
                 success: function (result) {
                     alert(result.message);
-                    window.location.hred = "@this.Url.Action("Index")";
+                    RefreshTrungTamGTVLTable()
                 },
                 error: function (error) {
                     alert(error.message);
                 }
             });
         }
+    }
+
+    function RefreshTrungTamGTVLTable() {
+        var oTable = $('#trungTamDataTable').dataTable();
+        oTable._fnPageChange(0);
+        oTable._fnAjaxUpdate();
     }
 
 </script>
