--- a/Vimas/Areas/HeThong/Views/NghiepDoan/Create.cshtml
+++ b/Vimas/Areas/HeThong/Views/NghiepDoan/Create.cshtml
@@ -61,6 +61,14 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="form-group">
+                            <label class="control-label col-md-4" for="WebsiteUrl">Website</label>
+                            <div class="col-md-6">
+                                <div class="fg-line">
+                                    @Html.TextBoxFor(q => q.WebsiteUrl, new { @class = "form-control" })
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <div class="col-md-6">
                         <div class="form-group">
@@ -84,6 +92,7 @@
                             <div class="col-md-6">
                                 <div class="fg-line">
                                     @Html.TextBoxFor(q => q.LuongCoBan, new { @class = "form-control" })
+                                    @Html.ValidationMessageFor(q => q.LuongCoBan)
                                 </div>
                             </div>
                         </div>
@@ -92,6 +101,7 @@
                             <div class="col-md-6">
                                 <div class="fg-line">
                                     @Html.TextBoxFor(q => q.PhiDichVu, new { @class = "form-control" })
+                                    @Html.ValidationMessageFor(q => q.PhiDichVu)
                                 </div>
                             </div>
                         </div>
@@ -100,6 +110,7 @@
                             <div class="col-md-6">
                                 <div class="fg-line">
                                     @Html.TextBoxFor(q => q.PhiUTDT, new { @class = "form-control" })
+                                    @Html.ValidationMessageFor(q => q.PhiUTDT)
                                 </div>
                             </div>
                         </div>
