--- a/Vimas/Areas/HeThong/Views/NghiepDoan/Edit.cshtml
+++ b/Vimas/Areas/HeThong/Views/NghiepDoan/Edit.cshtml
@@ -59,6 +59,14 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="form-group">
+                            <label class="control-label col-md-4" for="WebsiteUrl">Website</label>
+                            <div class="col-md-6">
+                                <div class="fg-line">
+                                    @Html.TextBoxFor(q => q.WebsiteUrl, new { @class = "form-control" })
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <div class="col-md-6">
                         <div class="form-group">
