--- a/Vimas/Areas/HeThong/Views/NghiepDoan/Index.cshtml
+++ b/Vimas/Areas/HeThong/Views/NghiepDoan/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "Nghiệp đoàn";
+    ViewBag.Title = "Danh sách nghiệp đoàn";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -8,7 +8,7 @@
     <div class="card-header">
         <div class="row">
             <div class="col-md-8">
-                <h3>Nghiệp đoàn</h3>
+                <h3>Danh sách Nghiệp đoàn</h3>
             </div>
             <div class="col-md-4">
                 <a href="@this.Url.Action("Create")" class="btn btn-primary pull-right ">
