--- a/Vimas/Areas/HeThong/Views/CongTyChungNghe/Index.cshtml
+++ b/Vimas/Areas/HeThong/Views/CongTyChungNghe/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "Danh sách Trung Tâm Giới Thiệu Việc Làm";
+    ViewBag.Title = "Công ty chứng nghề";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -8,11 +8,11 @@
     <div class="card-header">
         <div class="row">
             <div class="col-md-8">
-                <h3>Danh sách Trung tâm giới thiệu việc làm</h3>
+                <h3>Danh sách Công ty chứng nghề</h3>
             </div>
             <div class="col-md-4">
                 <a href="@this.Url.Action("Create")" class="btn btn-primary pull-right ">
-                    <i class="left-icon glyphicon glyphicon-plus"></i>   Thêm trung tâm
+                    <i class="left-icon glyphicon glyphicon-plus"></i>   Thêm công ty chứng nghề
                 </a>
             </div>
         </div>
@@ -20,26 +20,26 @@
     </div>
     <div class="card-padding">
         <div id="datatable">
-            <table id="trungTamDataTable" class="table table-striped table-bordered table-hover" style="width: 100% !important">
+            <table id="congTyChungNgheDataTable" class="table table-striped table-bordered table-hover" style="width: 100% !important">
                 <thead style="white-space: nowrap; text-overflow: ellipsis;">
                     <tr>
                         <th>
-                            <label>Mã Nguồn</label>
+                            <label>Tên viết tắt</label>
                         </th>
                         <th>
-                            <label class="">Tên cơ sở</label>
+                            <label class="">Tên tiếng Việt</label>
                         </th>
                         <th>
-                            <label class="">Địa Chỉ</label>
+                            <label class="">Tên tiếng Anh</label>
                         </th>
                         <th>
-                            <label class="">SĐT</label>
+                            <label class="">Địa chỉ tiếng Việt</label>
                         </th>
                         <th>
-                            <label class="">Fax</label>
+                            <label class="">Người đại diện</label>
                         </th>
                         <th>
-                            <label class="">Số HDLK</label>
+                            <label class="">Điện thoại</label>
                         </th>
                         <th>
                             <label class=""></label>
@@ -56,12 +56,12 @@
         InitOrderDatatable();
     });
     function InitOrderDatatable() {
-        $("#trungTamDataTable").dataTable({
+        $("#congTyChungNgheDataTable").dataTable({
             "bSort": false,
             "bRetrieve": true,
             "bServerSide": true,
             "bScrollCollapse": true,
-            "sAjaxSource": "@Url.Action("LoadDanhSachTrungTam")",
+            "sAjaxSource": "@Url.Action("LoadDanhSachCongTyChungNghe")",
             "bProcessing": true,
             "iDisplayLength": 10,
             "aLengthMenu": [10, 25, 50],
@@ -87,9 +87,9 @@
                     "aTargets": [6],
                     "mRender": function (data, type, o) {
                         var data = o[6];
-                        var detail = "<a id='detailTrungTam' class='btn btn-sm btn-primary' href='@Url.Action("Detail", "TrungTamGTVL")\/" + data + "\'><i class='fa fa-eye'></i> Detail</a>";
-                        var del = "<a id='deleteTrungTam' class='btn btn-sm btn-danger' onClick='Delete("+data+")'><i class='glyphicon glyphicon-trash'></i> Delete</a>";
-                        var edit = "<a id='editTrungTam' class='btn btn-sm btn-primary' href='@Url.Action("Edit", "TrungTamGTVL")\/" + data + "\'><i class='glyphicon glyphicon-pencil'></i> Edit</a>";
+                        var detail = "<a id='detailCongTyChungNghe' class='btn btn-sm btn-primary' href='@Url.Action("Detail", "CongTyChungNghe")\/" + data + "\'><i class='fa fa-eye'></i> Detail</a>";
+                        var del = "<a id='deleteCongTyChungNghe' class='btn btn-sm btn-danger' onClick='Delete(" + data + ")'><i class='glyphicon glyphicon-trash'></i> Delete</a>";
+                        var edit = "<a id='editCongTyChungNghe' class='btn btn-sm btn-primary' href='@Url.Action("Edit", "CongTyChungNghe")\/" + data + "\'><i class='glyphicon glyphicon-pencil'></i> Edit</a>";
                         return detail +" "+edit +" "+ del;
                     }
                 }
@@ -107,7 +107,7 @@
                         method: "POST",
                 success: function (result) {
                     alert(result.message);
-                    RefreshTrungTamGTVLTable()
+                    RefreshCongTyChungNgheTable();
                 },
                 error: function (error) {
                     alert(error.message);
@@ -116,8 +116,8 @@
         }
     }
 
-    function RefreshTrungTamGTVLTable() {
-        var oTable = $('#trungTamDataTable').dataTable();
+    function RefreshCongTyChungNgheTable() {
+        var oTable = $('#congTyChungNgheDataTable').dataTable();
         oTable._fnPageChange(0);
         oTable._fnAjaxUpdate();
     }
