--- a/Vimas/Views/Shared/_Layout.cshtml
+++ b/Vimas/Views/Shared/_Layout.cshtml
@@ -144,7 +144,17 @@
                         </ul>
                     </li>
                 }
-
+                @if (user.IsInRole("Admin") || (user.IsInRole("PhongXKLD")))
+                {
+                    <li class="sub-menu submenu-style">
+                        <a href="#"><i class="zmdi zmdi-globe"></i>Quản lý công ty chứng nghề</a>
+                        <ul>
+                            <li>
+                                <a href="@Url.Action("Index", "CongTyChungNghe", new { area = "HeThong" })"><i class="sub-menu zmdi zmdi-trending-up"></i> Danh sách công ty chứng nghề</a>
+                            </li>
+                        </ul>
+                    </li>
+                }
                 @if (user.IsInRole("Admin"))
                 {
                     <li class="sub-menu submenu-style">
