copy thanh cong

--- a/Vimas/Areas/HocVien/Views/ThongTinCaNhan/Detail.cshtml
+++ b/Vimas/Areas/HocVien/Views/ThongTinCaNhan/Detail.cshtml
@@ -328,6 +328,7 @@
                     id: idQTLV,
                 },
                 success: function (result) {
+                    RefreshQTLVTable();
                     alert(result.message);
                 },
                 error: function (error) {
