Index cho hợp đồng DOLAB

--- a/Vimas/Views/Shared/_Layout.cshtml
+++ b/Vimas/Views/Shared/_Layout.cshtml
@@ -114,8 +114,10 @@
                             <a href="@Url.Action("Index", "ThongTinNopTien" , new { area="HocVien" })"><i class="sub-menu zmdi zmdi-trending-up"></i> Danh sách thu/chi</a>
                         </li>
                         <li>
-
                             <a href="@Url.Action("Index", "KyTucXa" , new { area="HocVien" })"><i class="sub-menu zmdi zmdi-trending-up"></i> Thông tin ký túc xá</a>
+                        </li>
+                        <li>
+                            <a href="@Url.Action("Index", "HopDongDOLAB" , new { area="HeThong" })"><i class="sub-menu zmdi zmdi-trending-up"></i> Danh sách hợp đồng DOLAB</a>
                         </li>
                     </ul>
                 </li>
