--- a/Vimas/Areas/HeThong/Views/HopDongDOLAB/Index.cshtml
+++ b/Vimas/Areas/HeThong/Views/HopDongDOLAB/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "Trung Tâm Giới Thiệu Việc Làm";
+    ViewBag.Title = "Hợp đồng DOLAB";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -8,11 +8,11 @@
     <div class="card-header">
         <div class="row">
             <div class="col-md-8">
-                <h3>Danh sách Trung tâm giới thiệu việc làm</h3>
+                <h3>Danh sách hợp đồng DOLAB</h3>
             </div>
             <div class="col-md-4">
                 <a href="@this.Url.Action("Create")" class="btn btn-primary pull-right ">
-                    <i class="left-icon glyphicon glyphicon-plus"></i>   Thêm trung tâm
+                    <i class="left-icon glyphicon glyphicon-plus"></i>   Thêm hợp đồng
                 </a>
             </div>
         </div>
@@ -20,26 +20,23 @@
     </div>
     <div class="card-padding">
         <div id="datatable">
-            <table id="trungTamDataTable" class="table table-striped table-bordered table-hover" style="width: 100% !important">
+            <table id="DOLABDatatable" class="table table-striped table-bordered table-hover" style="width: 100% !important">
                 <thead style="white-space: nowrap; text-overflow: ellipsis;">
                     <tr>
                         <th>
-                            <label>Mã Nguồn</label>
+                            <label>Số đăng ký hợp đồng</label>
                         </th>
                         <th>
-                            <label class="">Tên cơ sở</label>
+                            <label class="">Số công văn</label>
                         </th>
                         <th>
-                            <label class="">Địa Chỉ</label>
+                            <label class="">Số phiếu tiếp nhận</label>
                         </th>
                         <th>
-                            <label class="">SĐT</label>
+                            <label class="">Ngày đăng ký</label>
                         </th>
                         <th>
-                            <label class="">Fax</label>
-                        </th>
-                        <th>
-                            <label class="">Số HDLK</label>
+                            <label class="">Ngày nhận</label>
                         </th>
                         <th>
                             <label class=""></label>
@@ -56,12 +53,12 @@
         InitOrderDatatable();
     });
     function InitOrderDatatable() {
-        $("#trungTamDataTable").dataTable({
+        $("#DOLABDatatable").dataTable({
             "bSort": false,
             "bRetrieve": true,
             "bServerSide": true,
             "bScrollCollapse": true,
-            "sAjaxSource": "@Url.Action("LoadDanhSachTrungTam")",
+            "sAjaxSource": "@Url.Action("LoadDanhSachDOLAB")",
             "bProcessing": true,
             "iDisplayLength": 10,
             "aLengthMenu": [10, 25, 50],
@@ -80,13 +77,13 @@
             },
             "aoColumnDefs": [
                 {
-                    "aTargets": [0, 1, 2, 3, 4, 5],
+                    "aTargets": [0, 1, 2, 3, 4],
                     "bSortable": false
                 },
                 {
-                    "aTargets": [6],
+                    "aTargets": [5],
                     "mRender": function (data, type, o) {
-                        var data = o[6];
+                        var data = o[5];
                         var detail = "<a id='detailTrungTam' class='btn btn-sm btn-primary' href='@Url.Action("Detail", "TrungTamGTVL")\/" + data + "\'><i class='fa fa-eye'></i> Detail</a>";
                         var del = "<a id='deleteTrungTam' class='btn btn-sm btn-danger' onClick='Delete("+data+")'><i class='glyphicon glyphicon-trash'></i> Delete</a>";
                         var edit = "<a id='editTrungTam' class='btn btn-sm btn-primary' href='@Url.Action("Edit", "TrungTamGTVL")\/" + data + "\'><i class='glyphicon glyphicon-pencil'></i> Edit</a>";
@@ -107,7 +104,7 @@
                         method: "POST",
                 success: function (result) {
                     alert(result.message);
-                    RefreshTrungTamGTVLTable()
+                    RefreshDOLABDatatable()
                 },
                 error: function (error) {
                     alert(error.message);
@@ -116,7 +113,7 @@
         }
     }
 
-    function RefreshTrungTamGTVLTable() {
+    function RefreshDOLABDatatable() {
         var oTable = $('#trungTamDataTable').dataTable();
         oTable._fnPageChange(0);
         oTable._fnAjaxUpdate();
